--- a/CSS/modelo_flexible/style.css
+++ b/CSS/modelo_flexible/style.css
@@ -54,20 +54,19 @@ main {
 #container {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around;
-    margin: 1em;
     height: 40%;
+    justify-content: space-around;
 }
 
 .item {
     display: flex;
     flex-flow: column wrap;
+    background-color: #E53888;
+    border-radius: 15px;
     align-items: center;
     justify-content: center;
     gap: 1em;
-    border-radius: 15px;
-    padding: 1%;
-    background-color: #E53888;
+    padding: 1em;
 }
 
 .item>h2 {
