--- a/CSS/mundo_munecas/assets/css/style.css
+++ b/CSS/mundo_munecas/assets/css/style.css
@@ -110,3 +110,40 @@ li:hover {
 #carrito-1:hover {
     cursor: pointer;
 }
+
+.vendidas {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: end;
+    padding: 0 80px 0 80px;
+    height: 60px;
+    border: 2px solid red;
+}
+
+select {
+    width: 150px;
+    height: 25px;
+}
+
+.card {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    background-color: #eeeeee;
+}
+
+.cards {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.card>img {
+    width: 150px;
+    height: auto;
+}
+
+footer {
+    background-color: #d5a6bd;
+}
